--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
     <div class="nav-wrapper container">
         <a id="logo-container" href="../" class="brand-logo"><b>JEK</b></a>
       <ul class="right hide-on-med-and-down">
+          <li><a href="https://reviewer.network">Partner Firma</a></li>
           <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
        		<li><a href="../pic">Bilder</a></li>
         	<li><a href="../contact" target="_blank">Kontakt</a></li>
           <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
       </ul>
       <ul id="nav-mobile" class="side-nav">
+          <li><a href="https://reviewer.network">Partner Firma</a></li>
           <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
         	<li><a href="../pic">Bilder</a></li>
 		      <li><a href="../contact" target="_blank">Kontakt</a></li>
@@ -65,115 +67,12 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-		   <!-- TS3 Widget  - https://www.tsviewer.com/index.php?page=ts_viewer&ID=1101205  -->
-			<div id="ts3viewer_1101205" style="background-color:rgb(235, 235, 235); "> </div>
-			<script src="https://static.tsviewer.com/short_expire/js/ts3viewer_loader.js"></script>
-			<script>var ts3v_url_1 = "https://www.tsviewer.com/ts3viewer.php?ID=1101205&text=757575&text_size=12&text_family=1&text_s_color=000000&text_s_weight=bold&text_s_style=italic&text_s_variant=small-caps&text_s_decoration=underline&text_i_color=&text_i_weight=normal&text_i_style=normal&text_i_variant=normal&text_i_decoration=none&text_c_color=&text_c_weight=normal&text_c_style=normal&text_c_variant=normal&text_c_decoration=none&text_u_color=000000&text_u_weight=normal&text_u_style=normal&text_u_variant=normal&text_u_decoration=none&text_s_color_h=&text_s_weight_h=bold&text_s_style_h=italic&text_s_variant_h=small-caps&text_s_decoration_h=underline&text_i_color_h=000000&text_i_weight_h=bold&text_i_style_h=normal&text_i_variant_h=normal&text_i_decoration_h=none&text_c_color_h=&text_c_weight_h=normal&text_c_style_h=normal&text_c_variant_h=normal&text_c_decoration_h=none&text_u_color_h=&text_u_weight_h=bold&text_u_style_h=normal&text_u_variant_h=normal&text_u_decoration_h=none&flags=0&hideEmptyChannels&iconset=default_colored_2014_tsv";
-			ts3v_display.init(ts3v_url_1, 1101205, 100);</script>
-          </div>
-        </div>
-		 <!-- Discord Widget  -->
-		    <div class="col s12 m4">
-            <iframe src="https://discordapp.com/widget?id=239725742575845376&theme=light" width="100%" height="350px" lowtransparency="true" frameborder="0"></iframe>
-          </div>
-        <div class="col s12 m4">
-          <div class="icon-block">
-             <iframe width="100%" height="315" src="https://www.youtube.com/embed/NFTNyxm9HOc" frameborder="0" allowfullscreen></iframe>
+		  <!-- Google Kalender Widget -->   
+      <iframe src="https://calendar.google.com/calendar/embed?src=votgaming%40gmail.com&ctz=Europe%2FBerlin" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>  
           </div>
         </div>
         </div>
-    </div>
-  </div>
-  
-      <div id="games" class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">Alle Spiele Server</h5>
         </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="../pic/other.jpg" alt="Other Games" style="display: block; transform: translate3d(-50%, 347px, 0px);"></div>
-  </div>
-  <div class="container">
-    <div class="section">
-      <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Wir haben diverse Spiele auf unserem Server!</h4>
-			<p class="left-align light"><b>Wie joine ich den Spiele Servern? </b><br>Sind unsere Server online? <a href="https://discordler.github.io/de/gaming">Prüfe es hier!</a> und lasse die Seite einfach auf deinem 2. Bildschirm.<br>
-			Verbinde dich mit unserem direkten join Link:<br>
-			→ <a href="https://discordler.github.io/de/gmod">Alle Garry's Mod Server</a><br>
-			→ <a href="https://discordler.github.io/de/mw3">CoD: Modern Warfare 3 (TEKNO): Klicke hier</a><br>
-      → <a href="https://discordler.github.io/de/gb-uch">Gang Beasts / Ultimate Chicken Horse</a><br>
-			→ <a href="steam://connect/discordler.ddns.net:28019">Counter Strike: Global Offensive</a><br>
-			→ <a href="steam://connect/discordler.ddns.net:28023">ARK - Survival Evolved</a><br>
-			→ <a href="steam://connect/discordler.ddns.net:28015">RUST</a><br>
-			→ <a href="steam://connect/discordler.ddns.net:28022">Arma 2 Operation Arrowhead</a><br>
-			→ <a href="steam://connect/discordler.ddns.net:28020">No More Room in Hell (F2P)</a><br>
-			<br><i>WEG 2: </i><br>Öffne die Konsole wenn du im Spiel bist: (Zuerst die Konsole in den Einstellungen aktivieren!)<br>
-			→ <a href="https://discordler.github.io/de/gmod">Alle Garry's Mod Server</a><br>
-			→ <a href="https://discordler.github.io/de/mw3">CoD: Modern Warfare 3 (TEKNO): Klicke hier</a><br>
-			→ Counter Strike: Global Offensive: 'connect discordler.ddns.net:28019'<br>
-			→ ARK - Survival Evolved: 'connect discordler.ddns.net:28023'<br>
-			→ RUST: 'connect discordler.ddns.net:28015'<br>
-			→ ARMA 2 Operation Arrowhead: 'connect discordler.ddns.net:28022'<br>
-			→ No More Room In Hell: 'connect discordler.ddns.net:28020'<br><br>
-		</div>
-      </div>
-    </div>
-  </div>
-  
-  
-  <div id="other" class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">Weitere Game Server Informationen</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="../pic/rust.jpg" alt="Rust by night"></div>
-  </div>
-  <div class="container">
-    <div class="section">
-      <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Alle weiteren Infos findest du hier.</h4>
-            <p class="left-align light">
-			<br>Gelangweilt? Dann schau mal <a href="../other/minigame2">hier!</a>
-			<br><b>Rust Informationen:</b>
-			<br>- Integrierte mini map in der oberen liken Ecke die alle Spieler auf dem Serer anzeigt sowie die Richtung in die sie schauen.<br>
-			- Wann war RUST das letze mal online? </b><a href="https://www.battlemetrics.com/servers/rust/702811">Klicke hier um den Status zu überprüfen</a><br>
-	    		- Rust Map für den 2. Bildschirm? <a href="http://discordler.ddns.net:28015" target="_blank">Klicke hier!</a><br><br>
-			<b>Befehle</b><br>/kit starter <b>|</b> Wenn du gestorben bist kannst du mit einem Starter Kit neu anfangen <br>/map <b>|</b> Zeige die Minimap<br>/home set "homename" <b>|</b> Setze deine Basis um dich dorthin zu teleportieren<br>/friend add "username" <b>|</b> Füge einen Freund hinzu </p>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-  
-  <div id="gmod" class="parallax-container valign-wrapper">
-    <div class="section no-pad-bot">
-      <div class="container">
-        <div class="row center">
-          <h5 class="header col s12 light">Garrys Mod</h5>
-        </div>
-      </div>
-    </div>
-    <div class="parallax"><img src="../pic/gmod.jpg" alt="Gmod"></div>
-  </div>
-  <div class="container">
-    <div class="section">
-      <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Viel Spaß in TTT, Prop Hunt und mehr!</h4>
-			<a href="https://discordler.github.io/de/gmod">Alle Infos findest du Hier!</a><br>
-		
-		</div>
-      </div>
     </div>
   </div>
 
@@ -205,10 +104,10 @@
           <h5 class="white-text">Jugendleiter</h5>
           <ul>
             <li><a class="white-text" href="../contact/fabian.html">Fabian Seitz</a></li>
-            <li><a class="white-text" href="../contact/fabian.html">Kai Sissmeir</a></li>
-            <li><a class="white-text" href="../contact/fabian.html">Flo Katholing</a></li>
-            <li><a class="white-text" href="../contact/fabian.html">Adrian Knorr</a></li>
-            <li><a class="white-text" href="../contact/fabian.html">Maxi Amann</a></li>
+            <li><a class="white-text" href="../contact/kai.html">Kai Sissmeir</a></li>
+            <li><a class="white-text" href="../contact/flo.html">Flo Katholing</a></li>
+            <li><a class="white-text" href="../contact/adrian.html">Adrian Knorr</a></li>
+            <li><a class="white-text" href="../contact/maxi.html">Maxi Amann</a></li>
           </ul>
         </div>
     <div class="footer-copyright">
@@ -218,6 +117,7 @@
     </div>
     <div class="footer-copyright text-center">
       <div class="container text-center">
+        <a class="white-text text-center" href="../impressum.html">Impressum</a> | 
         <a class="white-text text-center" href="https://github.com/faserf/jek">GitHub</a> | 
         <a class="white-text text-right" href="http://www.kirchseeon.de/index.php?id=440,50" target="_blank">Kirchseeon.de</a>
       </div>
