updated index with new picture

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="../pic/discord.png" alt="Our own Discord"></div>
+    <div class="parallax"><img src="../pic/jek.jpg" alt="JEK"></div>
   </div>
   <div class="container">
     <div class="section">
