added our whatsapp group

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
           <li><a href="https://reviewer.network">Partner Firma</a></li>
           <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
        		<li><a href="../pic">Bilder</a></li>
+          <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
         	<li><a href="../contact" target="_blank">Kontakt</a></li>
           <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
       </ul>
@@ -38,6 +39,7 @@
           <li><a href="https://reviewer.network">Partner Firma</a></li>
           <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
         	<li><a href="../pic">Bilder</a></li>
+          <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
 		      <li><a href="../contact" target="_blank">Kontakt</a></li>
           <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
       </ul>
