--- a/contact/fabian.html
+++ b/contact/fabian.html
@@ -58,7 +58,7 @@
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="../pic/fabian.png" alt="Fabian"></div>
+    <div class="parallax"><img src="../pic/faserf.jpg" alt="Fabian"></div>
   </div>
   <div class="container">
     <div class="section">
