--- a/donations/index.html
+++ b/donations/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html> <html lang="de"> <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="description" content="Das Jugendzentrum in Eglharting/Kirchseeon (JEK) - Nette Abende, Spiele, Getränke und mehr!">
+  <meta name="description" content="Wie spende ich an das JEK?">
   <meta name="keywords" content="Jugendzentrum, JEK">
   <meta name="author" content="JEK">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>JEK Template</title>
+  <title>JEK Spenden</title>
   <link rel="icon" type="image/png" href="../pic/ico.png" sizes="32x32">
   <meta http-equiv="expires" content="2419200"> <!-- Zwischenspeicherung dieser Website auf Proxy-Servern für 1 Monat -->
   <!-- CSS -->
@@ -20,7 +20,6 @@
       <ul class="right hide-on-med-and-down">
           <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
           <li><a href="../pic">Bilder</a></li>
-          <li><a href="../donations">Spenden</a></li>
           <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
           <li><a href="../contact" target="_blank">Kontakt</a></li>
           <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
@@ -28,7 +27,6 @@
       <ul id="nav-mobile" class="side-nav">
           <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
           <li><a href="../pic">Bilder</a></li>
-          <li><a href="../donations">Spenden</a></li>
           <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
           <li><a href="../contact" target="_blank">Kontakt</a></li>
           <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
@@ -40,12 +38,9 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h2 class="header center teal-text text-lighten-2">Jugendzentrum Eglharting-Kirchseeon (<b>JEK</b>)</h2>
+        <h2 class="header center teal-text text-lighten-2">Spenden an das (<b>JEK</b>) ?</h2>
         <div class="row center">
-          <h5 class="header col s12 light">Alle Neuigkeiten, Öffnungszeiten und mehr findest du hier.</h5>
-        </div>
-        <div class="row center">
-            <a href="../open" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Öffnungszeiten</a>
+          <h5 class="header col s12 light">Alle Spenden und Infos wie du spendest findest du hier!</h5>
         </div>
         <br><br>
       </div>
@@ -54,15 +49,22 @@
   </div>
   <div class="container">
     <div class="section">
-      <!-- Icon Section -->
       <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            Text kommt hier.
-          </div>
+        <div class="col s12 center">
+          <h3><i class="mdi-content-send brown-text"></i></h3>
+          <h4>Wie spende ich?</h4>
+          <p class="left-align light">Schreibe einfach eine kurze E-Mail an uns: moritz.faessler@kirchseeon.de<br><br>
+          <h4>Bisherige Spenden:</h4>
+          <p class="left-align light">Vielen Dank an unsere bisherigen Spender! Nur durch spenden können wir unseren Jugendlichen einen schöneren und bequemeren Jugendtreff ermöglichen!<br><br>
+            - Server (auf welchem diese Website läuft): <a href="https://www.pari.com" target="_blank">PARI GmbH</a><br>
+            - Couch (silberne): <a href="https://www.oew.de/" target="_blank">Oestreicher+Wagner GmbH</a><br>
+            - Musik Laptop: <a href="https://www.pari.com" target="_blank">PARI GmbH</a><br>
+            - Bluetooth Empfänger für Musik, Spiele & mehr: <a href="../contact/" target="_blank">Unsere Jugendleiter</a>
+
+            <br><br><br>
         </div>
-        </div>
-        </div>
+      </div>
+
     </div>
   </div>
 
