--- a/impressum.html
+++ b/impressum.html
@@ -3,40 +3,32 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Impressum - Discordler</title>
+  <title>Impressum - JEK</title>
   <link rel="icon" type="image/png" href="../pic/ico.png" sizes="32x32">
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-92662613-2', 'auto');
-  ga('send', 'pageview');
-</script>
 
 </head>
 <body>
-  <nav class="white" role="navigation">
+<nav class="white" role="navigation">
     <div class="nav-wrapper container">
-        <a id="logo-container" href="../de/" class="brand-logo"><b>Discord</b>ler</a>
+        <a id="logo-container" href="../" class="brand-logo"><b>JEK</b></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="../de/gmod">Gmod</a></li>
-		<li><a href="../en/app" target="_blank">Official Discordler App</a></li>
-        <li><a href="../de/joinus" target="_blank">Discord, TS3 & Steam</a></li>
-		<li><a href="../de/news" target="_blank">News & Videos</a></li>
-		<li><a href="../en/impressum" target="_blank">English</a></li>
+          <li><a href="https://reviewer.network">Partner Firma</a></li>
+          <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
+          <li><a href="../pic">Bilder</a></li>
+          <li><a href="../contact" target="_blank">Kontakt</a></li>
+          <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
       </ul>
       <ul id="nav-mobile" class="side-nav">
-        <li><a href="../de/gmod">Gmod</a></li>
-		<li><a href="../en/app" target="_blank">Official Discordler App</a></li>
-        <li><a href="../de/joinus" target="_blank">Discord, TS3 & Steam</a></li>
-        <li><a href="../de/news" target="_blank">News & Videos</a></li>
-		<li><a href="../en/impressum" target="_blank">English</a></li>
+          <li><a href="https://reviewer.network">Partner Firma</a></li>
+          <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
+          <li><a href="../pic">Bilder</a></li>
+          <li><a href="../contact" target="_blank">Kontakt</a></li>
+          <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
     </div>
