--- a/index.html
+++ b/index.html
@@ -12,16 +12,6 @@
   <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/> 
   
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-44631825-3"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-44631825-3');
-</script>
-
   </head>
   <body>
   <nav class="white" role="navigation">
@@ -30,6 +20,7 @@
       <ul class="right hide-on-med-and-down">
           <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
        		<li><a href="../pic">Bilder</a></li>
+          <li><a href="../donations">Spenden</a></li>
           <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
         	<li><a href="../contact" target="_blank">Kontakt</a></li>
           <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
@@ -37,6 +28,7 @@
       <ul id="nav-mobile" class="side-nav">
           <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
         	<li><a href="../pic">Bilder</a></li>
+          <li><a href="../donations">Spenden</a></li>
           <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
 		      <li><a href="../contact" target="_blank">Kontakt</a></li>
           <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
@@ -48,10 +40,9 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h2 class="header center teal-text text-lighten-2">Das Jugendzentrum Eglharting-Kirchseeon (<b>JEK</b>)</h2>
+        <h2 class="header center teal-text text-lighten-2">Jugendzentrum Eglharting-Kirchseeon (<b>JEK</b>)</h2>
         <div class="row center">
-          <h5 class="header col s12 light">Willkommen bei der Offiziellen Website
-	         <br>Alle Neuigkeiten, Öffnungszeiten und mehr findest du hier.</h5>
+          <h5 class="header col s12 light">Alle Neuigkeiten, Öffnungszeiten und mehr findest du hier.</h5>
         </div>
         <div class="row center">
             <a href="../open" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Öffnungszeiten</a>
@@ -68,7 +59,7 @@
         <div class="col s12 m4">
           <div class="icon-block">
 		  <!-- Google Kalender Widget -->   
-      <iframe src="https://calendar.google.com/calendar/embed?src=votgaming%40gmail.com&ctz=Europe%2FBerlin" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>  
+      <iframe src="https://calendar.google.com/calendar/embed?src=votgaming%40gmail.com&ctz=Europe%2FBerlin" style="border: 0" width="400" height="300" frameborder="0" scrolling="no"></iframe>  
           </div>
         </div>
         </div>
@@ -83,10 +74,7 @@
       <i class="large material-icons">menu</i>
     </a>
     <ul>
-      <li><a class="btn-floating red" href="none-yet" target="_blank"><i class="material-icons">vpn_key</i></a></li>
-      <li><a class="btn-floating blue" href="none-yet" target="_blank"><i class="material-icons">info_outline</i></a></li>
-      <li><a class="btn-floating green" href="none-yet"><i class="material-icons">report_problem</i></a></li>
-      <li><a class="btn-floating yellow darken-1" href="none-yet" target="_blank"><i class="material-icons">description</i></a></li>
+      <li><a class="btn-floating red" href="admin/" target="_blank"><i class="material-icons">vpn_key</i></a></li>
     </ul>
   </div>
 
