--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h2 class="header center teal-text text-lighten-2">Jugendzentrum Eglharting-Kirchseeon (<b>JEK</b>)</h2>
+        <h2 class="header center teal-text text-lighten-2"><b>J</b>ugendzentrum <b>E</b>glharting-<b>K</b>irchseeon</h2>
         <div class="row center">
           <h5 class="header col s12 light">Alle Neuigkeiten, Öffnungszeiten und mehr findest du hier.</h5>
         </div>
