added another donation

--- a/donations/index.html
+++ b/donations/index.html
@@ -59,6 +59,7 @@
             - Server (auf welchem diese Website läuft): <a href="https://www.pari.com" target="_blank">PARI GmbH</a><br>
             - Couch (silberne): <a href="https://www.oew.de/" target="_blank">Oestreicher+Wagner GmbH</a><br>
             - Musik Laptop: <a href="https://www.pari.com" target="_blank">PARI GmbH</a><br>
+            - Darts & Dartset: <a href="../contact/" target="_blank">Unsere Jugendleiter</a>
             - Bluetooth Empfänger für Musik, Spiele & mehr: <a href="../contact/" target="_blank">Unsere Jugendleiter</a>
 
             <br><br><br>
