--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
   </div>
 
   <!-- Footer -->
-  
-  <footer class="page-footer teal">
+
+    <footer class="page-footer teal">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
@@ -98,20 +98,30 @@
             <li><a class="white-text" href="../contact/maxi.html">Maxi Amann</a></li>
           </ul>
         </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Ansprechpersonen aus Gemeinde</h5>
+          <ul>
+            <li><a class="white-text" href="http://www.kirchseeon.de/index.php?id=440,50">Moritz Fässler</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <div class="footer-copyright">
       <div class="container">
-          Erstellt von einem <b>JEK</b> Leiter.
+          Erstellt von einem <b>JEK</b> Leiter
       </div>
     </div>
     <div class="footer-copyright text-center">
       <div class="container text-center">
-        <a class="white-text text-center" href="../impressum.html">Impressum</a> | 
+        <a class="white-text text-left" href="../impressum">Impressum</a> | 
         <a class="white-text text-center" href="https://github.com/faserf/jek">GitHub</a> | 
-        <a class="white-text text-right" href="http://www.kirchseeon.de/index.php?id=440,50" target="_blank">Kirchseeon.de</a>
+        <a class="white-text text-right" href="http://www.kirchseeon.de/index.php?id=440,50" target="_blank">Kirchseeon</a>
       </div>
     </div>
   </footer>
+ 
   <!-- Scripts-->
+  
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="../js/materialize.js"></script>
   <script src="../js/init.js"></script>
