fixed footer, updated navbar

--- a/impressum.html
+++ b/impressum.html
@@ -13,20 +13,24 @@
 
 </head>
 <body>
-<nav class="white" role="navigation">
+ <nav class="white" role="navigation">
     <div class="nav-wrapper container">
         <a id="logo-container" href="../" class="brand-logo"><b>JEK</b></a>
       <ul class="right hide-on-med-and-down">
-          <li><a href="https://reviewer.network">Partner Firma</a></li>
           <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
           <li><a href="../pic">Bilder</a></li>
+          <li><a href="../donations">Spenden</a></li>
+          <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
+          <li><a href="https://www.instagram.com/jugendtreffjek/" target="_blank">Instagram Seite</a></li>
           <li><a href="../contact" target="_blank">Kontakt</a></li>
           <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
       </ul>
       <ul id="nav-mobile" class="side-nav">
-          <li><a href="https://reviewer.network">Partner Firma</a></li>
           <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
           <li><a href="../pic">Bilder</a></li>
+          <li><a href="../donations">Spenden</a></li>
+          <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
+          <li><a href="https://www.instagram.com/jugendtreffjek/" target="_blank">Instagram Seite</a></li>
           <li><a href="../contact" target="_blank">Kontakt</a></li>
           <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
       </ul>
@@ -93,36 +97,46 @@ Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Komm
 
   <!-- Footer -->
   
-  <footer class="page-footer teal">
+    <footer class="page-footer teal">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
            <h5 class="white-text">Vielen Dank</h5>
            <p class="grey-text text-lighten-4">Besten Dank gehen an unsere JEK Leiter für ihr ehrenamtliches Engagement<br>
-		   Diese Website basiert auf der <a href="http://materializecss.com/templates/parallax-template/preview.html" target="_blank">Materialize (Parallax) Vorlage</a>.</p>
+       Diese Website basiert auf der <a href="http://materializecss.com/templates/parallax-template/preview.html" target="_blank">Materialize (Parallax) Vorlage</a>.</p>
         </div>
         <div class="col l3 s12">
           <h5 class="white-text">Jugendleiter</h5>
           <ul>
             <li><a class="white-text" href="../contact/fabian.html">Fabian Seitz</a></li>
-	          <li><a class="white-text" href="../contact/fabian.html">Kai Sissmeir</a></li>
-            <li><a class="white-text" href="../contact/fabian.html">Flo Katholing</a></li>
-            <li><a class="white-text" href="../contact/fabian.html">Adrian Knorr</a></li>
-            <li><a class="white-text" href="../contact/fabian.html">Maxi Amann</a></li>
+            <li><a class="white-text" href="../contact/kai.html">Kai Sissmeir</a></li>
+            <li><a class="white-text" href="../contact/flo.html">Flo Katholing</a></li>
+            <li><a class="white-text" href="../contact/adrian.html">Adrian Knorr</a></li>
+            <li><a class="white-text" href="../contact/maxi.html">Maxi Amann</a></li>
           </ul>
         </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Ansprechpersonen aus Gemeinde</h5>
+          <ul>
+            <li><a class="white-text" href="http://www.kirchseeon.de/index.php?id=440,50">Moritz Fässler</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <div class="footer-copyright">
       <div class="container">
-          Erstellt von einem <b>JEK</b> Leiter.
+          Erstellt von einem <b>JEK</b> Leiter
       </div>
     </div>
     <div class="footer-copyright text-center">
       <div class="container text-center">
+        <a class="white-text text-left" href="../impressum">Impressum</a> | 
         <a class="white-text text-center" href="https://github.com/faserf/jek">GitHub</a> | 
-	      <a class="white-text text-right" href="http://www.kirchseeon.de/index.php?id=440,50" target="_blank">Kirchseeon.de</a>
+        <a class="white-text text-right" href="http://www.kirchseeon.de/index.php?id=440,50" target="_blank">Kirchseeon</a>
       </div>
     </div>
   </footer>
+  
   <!-- Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="../js/materialize.js"></script>
