--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
        		<li><a href="../pic">Bilder</a></li>
           <li><a href="../donations">Spenden</a></li>
           <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
+          <li><a href="https://www.instagram.com/jugendtreffjek/" target="_blank">Instagram Seite</a></li>
         	<li><a href="../contact" target="_blank">Kontakt</a></li>
           <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
       </ul>
@@ -30,6 +31,7 @@
         	<li><a href="../pic">Bilder</a></li>
           <li><a href="../donations">Spenden</a></li>
           <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
+          <li><a href="https://www.instagram.com/jugendtreffjek/" target="_blank">Instagram Seite</a></li>
 		      <li><a href="../contact" target="_blank">Kontakt</a></li>
           <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
       </ul>
@@ -121,7 +123,7 @@
   </footer>
  
   <!-- Scripts-->
-  
+
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="../js/materialize.js"></script>
   <script src="../js/init.js"></script>
