--- a/other/template.html
+++ b/other/template.html
@@ -22,6 +22,7 @@
           <li><a href="../pic">Bilder</a></li>
           <li><a href="../donations">Spenden</a></li>
           <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
+          <li><a href="https://www.instagram.com/jugendtreffjek/" target="_blank">Instagram Seite</a></li>
           <li><a href="../contact" target="_blank">Kontakt</a></li>
           <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
       </ul>
@@ -30,6 +31,7 @@
           <li><a href="../pic">Bilder</a></li>
           <li><a href="../donations">Spenden</a></li>
           <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
+          <li><a href="https://www.instagram.com/jugendtreffjek/" target="_blank">Instagram Seite</a></li>
           <li><a href="../contact" target="_blank">Kontakt</a></li>
           <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
       </ul>
@@ -79,12 +81,12 @@
 
   <!-- Footer -->
   
-  <footer class="page-footer teal">
+    <footer class="page-footer teal">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
            <h5 class="white-text">Vielen Dank</h5>
-           <p class="grey-text text-lighten-4">Besten Dank gehen an unsere JEK Leiter für ihr ehrenamtliches Engagement!<br>
+           <p class="grey-text text-lighten-4">Besten Dank gehen an unsere JEK Leiter für ihr ehrenamtliches Engagement<br>
        Diese Website basiert auf der <a href="http://materializecss.com/templates/parallax-template/preview.html" target="_blank">Materialize (Parallax) Vorlage</a>.</p>
         </div>
         <div class="col l3 s12">
@@ -97,20 +99,30 @@
             <li><a class="white-text" href="../contact/maxi.html">Maxi Amann</a></li>
           </ul>
         </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Ansprechpersonen aus Gemeinde</h5>
+          <ul>
+            <li><a class="white-text" href="http://www.kirchseeon.de/index.php?id=440,50">Moritz Fässler</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <div class="footer-copyright">
       <div class="container">
-          Erstellt von einem <b>JEK</b> Leiter.
+          Erstellt von einem <b>JEK</b> Leiter
       </div>
     </div>
     <div class="footer-copyright text-center">
       <div class="container text-center">
-        <a class="white-text text-center" href="../impressum.html">Impressum</a> | 
+        <a class="white-text text-left" href="../impressum">Impressum</a> | 
         <a class="white-text text-center" href="https://github.com/faserf/jek">GitHub</a> | 
-        <a class="white-text text-right" href="http://www.kirchseeon.de/index.php?id=440,50" target="_blank">Kirchseeon.de</a>
+        <a class="white-text text-right" href="http://www.kirchseeon.de/index.php?id=440,50" target="_blank">Kirchseeon</a>
       </div>
     </div>
   </footer>
+
   <!-- Scripts-->
+  
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="../js/materialize.js"></script>
   <script src="../js/init.js"></script>
