--- a/index.html
+++ b/index.html
@@ -19,19 +19,17 @@
         <a id="logo-container" href="../" class="brand-logo"><b>JEK</b></a>
       <ul class="right hide-on-med-and-down">
           <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
-       		<li><a href="../pic">Bilder</a></li>
           <li><a href="../donations">Spenden</a></li>
           <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
-          <li><a href="https://www.instagram.com/jugendtreffjek/" target="_blank">Instagram Seite</a></li>
+          <li><a href="https://www.instagram.com/jugendtreffjek/" target="_blank">Instagram Seite & Bilder</a></li>
         	<li><a href="../contact" target="_blank">Kontakt</a></li>
           <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
       </ul>
       <ul id="nav-mobile" class="side-nav">
           <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
-        	<li><a href="../pic">Bilder</a></li>
           <li><a href="../donations">Spenden</a></li>
           <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
-          <li><a href="https://www.instagram.com/jugendtreffjek/" target="_blank">Instagram Seite</a></li>
+          <li><a href="https://www.instagram.com/jugendtreffjek/" target="_blank">Instagram Seite & Bilder</a></li>
 		      <li><a href="../contact" target="_blank">Kontakt</a></li>
           <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
       </ul>
