--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="../pic/jek.jpg" alt="JEK"></div>
+    <div class="parallax"><img src="../pic/jek2.jpg" alt="JEK"></div>
   </div>
   <div class="container">
     <div class="section">
