--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <h5 class="header col s12 light">Alle Neuigkeiten, Öffnungszeiten und mehr findest du hier.</h5>
         </div>
         <div class="row center">
-            <a href="../open" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Öffnungszeiten</a>
+            <a href="https://calendar.google.com/calendar?cid=anVnZW5kdHJlZmZqZWtAZ21haWwuY29t" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Öffnungszeiten</a>
         </div>
         <br><br>
       </div>
@@ -59,8 +59,7 @@
         <div class="col s12 m4">
           <div class="icon-block">
 		  <!-- Google Kalender Widget -->   
-      <iframe src="https://calendar.google.com/calendar/embed?src=votgaming%40gmail.com&ctz=Europe%2FBerlin" style="border: 0" width="350" height="300" frameborder="0" scrolling="no"></iframe>  
-          </div>
+<iframe src="https://calendar.google.com/calendar/embed?src=jugendtreffjek%40gmail.com&ctz=Europe%2FBerlin" style="border: 0" width="400" height="350" frameborder="0" scrolling="no"></iframe>    </div>
         </div>
         </div>
         </div>
