--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <li><a href="../donations">Spenden</a></li>
           <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
           <li><a href="https://www.instagram.com/jugendtreffjek/" target="_blank">Instagram Seite & Bilder</a></li>
-        	<li><a href="../contact" target="_blank">Kontakt</a></li>
+        	<li><a href="../prices" target="_blank">Getränke</a></li>
           <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
       </ul>
       <ul id="nav-mobile" class="side-nav">
@@ -30,7 +30,7 @@
           <li><a href="../donations">Spenden</a></li>
           <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
           <li><a href="https://www.instagram.com/jugendtreffjek/" target="_blank">Instagram Seite & Bilder</a></li>
-		      <li><a href="../contact" target="_blank">Kontakt</a></li>
+		      <li><a href="../prices" target="_blank">Getränke</a></li>
           <li><a href="../open" target="_blank">Öffnungszeiten</a></li>
       </ul>
       <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
@@ -59,7 +59,7 @@
         <div class="col s12 m4">
           <div class="icon-block">
 		  <!-- Google Kalender Widget -->   
-<iframe src="https://calendar.google.com/calendar/embed?src=jugendtreffjek%40gmail.com&ctz=Europe%2FBerlin" style="border: 0" width="400" height="350" frameborder="0" scrolling="no"></iframe>    </div>
+<iframe src="https://calendar.google.com/calendar/embed?src=jugendtreffjek%40gmail.com&ctz=Europe%2FBerlin" style="border: 0" width="350" height="350" frameborder="0" scrolling="no"></iframe>    </div>
         </div>
         </div>
         </div>
@@ -84,7 +84,7 @@
       <div class="row">
         <div class="col l6 s12">
            <h5 class="white-text">Vielen Dank</h5>
-           <p class="grey-text text-lighten-4">Besten Dank gehen an unsere JEK Leiter für ihr ehrenamtliches Engagement<br>
+           <p class="grey-text text-lighten-4">Besten Dank geht an unsere JEK Leiter für ihr ehrenamtliches Engagement<br>
        Diese Website basiert auf der <a href="http://materializecss.com/templates/parallax-template/preview.html" target="_blank">Materialize (Parallax) Vorlage</a>.</p>
         </div>
         <div class="col l3 s12">
@@ -112,6 +112,7 @@
     </div>
     <div class="footer-copyright text-center">
       <div class="container text-center">
+        <a class="white-text text-left" href="../contact">Kontakt</a> | 
         <a class="white-text text-left" href="../impressum">Impressum</a> | 
         <a class="white-text text-center" href="https://github.com/faserf/jek">GitHub</a> | 
         <a class="white-text text-right" href="http://www.kirchseeon.de/index.php?id=440,50" target="_blank">Kirchseeon</a>
