--- a/prices.html
+++ b/prices.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html> <html lang="de"> <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="description" content="Wie spende ich an das JEK?">
+  <meta name="description" content="Wie bezahle ich?">
   <meta name="keywords" content="Jugendzentrum, JEK">
   <meta name="author" content="JEK">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>JEK Bezahlen</title>
+  <title>JEK Getränkeliste & Bezahlen</title>
   <link rel="icon" type="image/png" href="../pic/ico.png" sizes="32x32">
   <meta http-equiv="expires" content="2419200"> <!-- Zwischenspeicherung dieser Website auf Proxy-Servern für 1 Monat -->
   <!-- CSS -->
@@ -64,9 +64,10 @@
 
           <h4>Bezahlmethoden</h4>
           <h5>Barzahlung</h5>
-          <p class="left-align light">Du kannst natürlich in Bar bezahlen. Nimm dir dazu einfach das Getränk und gib einem JEK Leiter das Geld.<br><br>
+          Du kannst natürlich in Bar bezahlen. Nimm dir dazu einfach das Getränk und gib einem JEK Leiter das Geld.<br><br>
           <h5>PayPal</h4>
-          <p class="left-align light">Wir bieten dir PayPal als Zahlmethode. Bitte stelle sicher bei der Bezahlung "Freunde & Familie" auszuwählen!<br><br>
+          Wir bieten dir PayPal als Zahlmethode. Bitte stelle sicher bei der Bezahlung "Freunde & Familie" auszuwählen!<br>
+          <p class="left-align light">
             - Email Adresse: jugendtreffjek@gmail.com<br>
             - <a href="https://www.paypal.me/reviewernetwork" target="_blank">PayPal Link</a><br>
 
