--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="col s12 m4">
           <div class="icon-block">
 		  <!-- Google Kalender Widget -->   
-<iframe src="https://calendar.google.com/calendar/embed?src=jugendtreffjek%40gmail.com&ctz=Europe%2FBerlin" style="border: 0" width="350" height="350" frameborder="0" scrolling="no"></iframe>    </div>
+<p class="left-align light"><iframe src="https://calendar.google.com/calendar/embed?src=jugendtreffjek%40gmail.com&ctz=Europe%2FBerlin" style="border: 0" width="350" height="450" frameborder="0" scrolling="no"></iframe>    </div>
         </div>
         </div>
         </div>
