--- a/prices.html
+++ b/prices.html
@@ -45,7 +45,7 @@
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="../pic/jek.jpg" alt="JEK"></div>
+    <div class="parallax"><img src="../pic/drinks.jpg" alt="JEK"></div>
   </div>
   <div class="container">
     <div class="section">
