--- a/prices.html
+++ b/prices.html
@@ -70,7 +70,7 @@
           <p class="left-align light">
             - Email Adresse: jugendtreffjek@gmail.com<br>
             - <a href="https://www.paypal.me/reviewernetwork" target="_blank">PayPal Link</a><br>
-
+            - <a href="../pic/1€.png" target="_blank">QR Code</a><br>
             <br><br><br>
         </div>
       </div>
