Übersicht an attraktionen im JEK

--- a/index.html
+++ b/index.html
@@ -66,6 +66,21 @@
     </div>
   </div>
 
+  <div class="container">
+    <div class="section">
+      <!-- Icon Section -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            Im Jek wird dir folgendes geboten: <a class="white-text text-left" href="../impressum">Attraktionen</a>.
+        </div>
+        </div>
+        </div>
+    </div>
+  </div>
+
+  
+
 <!-- FAB - Floating Action Button (Icons hier: http://materializecss.com/icons.html) -->
 	
 	<div class="fixed-action-btn vertical">
