--- a/attractions.html
+++ b/attractions.html
@@ -1,24 +1,16 @@
 <!DOCTYPE html> <html lang="de"> <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="author" content="Discordler">
+  <meta name="description" content="Attraktionen">
+  <meta name="keywords" content="Jugendzentrum, JEK">
+  <meta name="author" content="JEK">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Admin Bereich - JEK</title>
+  <title>JEK - Was bieten wir?</title>
   <link rel="icon" type="image/png" href="../pic/ico.png" sizes="32x32">
+  <meta http-equiv="expires" content="2419200"> <!-- Zwischenspeicherung dieser Website auf Proxy-Servern für 1 Monat -->
   <!-- CSS -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/> 
-  
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-92662613-2', 'auto');
-  ga('send', 'pageview');
-
-</script>
 
   </head>
   <body>
@@ -27,7 +19,6 @@
         <a id="logo-container" href="../" class="brand-logo"><b>JEK</b></a>
       <ul class="right hide-on-med-and-down">
           <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
-          <li><a href="../donations">Spenden</a></li>
           <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
           <li><a href="https://www.instagram.com/jugendtreffjek/" target="_blank">Instagram Seite & Bilder</a></li>
           <li><a href="../contact" target="_blank">Kontakt</a></li>
@@ -35,7 +26,6 @@
       </ul>
       <ul id="nav-mobile" class="side-nav">
           <li><a href="https://discordler.github.io/de/">Zockergemeinschaft</a></li>
-          <li><a href="../donations">Spenden</a></li>
           <li><a href="https://chat.whatsapp.com/8n12BV9ZgBiDJebTQXtF8e" target="_blank">WhatsApp Gruppe</a></li>
           <li><a href="https://www.instagram.com/jugendtreffjek/" target="_blank">Instagram Seite & Bilder</a></li>
           <li><a href="../contact" target="_blank">Kontakt</a></li>
@@ -48,47 +38,41 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h2 class="header center teal-text text-lighten-2">Admin Bereich</h2>
+        <h2 class="header center teal-text text-lighten-2">Attraktionen</h2>
         <div class="row center">
-          <h5 class="header col s12 light">Nur für JEK Leiter!</h5>
-        </div>
-        <div class="row center">
-            <a href="https://mremoteng.org/download" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">mRemoteNG Tool</a>
+          <h5 class="header col s12 light">Was bieten wir dir?</h5>
         </div>
         <br><br>
       </div>
     </div>
-    <div class="parallax"><img src="../pic/jek.png" alt="JEK"></div>
+    <div class="parallax"><img src="../pic/jek3.jpg" alt="JEK"></div>
   </div>
-
   <div class="container">
     <div class="section">
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-           <h4 class="left">PC Control (Start/Shutdown/Restart)</h4><br><br><br>
-             <p class="left-align light"><b>How to control the server? </b><br>
-              To shut down the server or restart it use the following link:<br>
-              <a href="http://reviewer.network/zadmin/pccontrol">HERE</a><br><br>
+          <h4>Folgendes wird dir gratis geboten:</h4>
+          <p class="left-align light">→ Billiard<br>
+          <p class="left-align light">→ Kicker<br>
+          <p class="left-align light">→ Airhockey<br>
+          <p class="left-align light">→ Wii U Spiele mit Beamer<br>
+          <p class="left-align light">→ Riesen Jenga<br>
+          <p class="left-align light">→ Musik und Getränke<br> <br><br>
 
-          <h4 class="left">General Stuff</h4><br><br><br>
-             <p class="left-align light"><b>How to access the HomeAssistant? </b><br>
-		     Go to <a href="http://jugendtreffjek.ddns.net:8123">HERE</a> and use the password "jek2018"<br>
-	   		<br>
-
-	<h4 class="left">Server Informations</h4><br><br><br>
-	<p class="left-align light"><b>Our Server Specifications: </b><br>
-		- OS: Debian 9<br>
-		- Model: Dell Optiplex 3010 MT<br>
-		- GPU: Intel Graphics<br>
-		- CPU: Intel i3 (Dual-Core - 4 Threads)<br>
-		- RAM: 8GB 1600Mhz DDR3<br>
-		- SSD 1: 256GB Samsung PM851 mSATA<br>
-		- HDD 2: 500GB WesternDigital Blue<br>
-    - HDD 3: 500GB WesternDigital Blue<br><br>
-		<br><br>
-	</div>
+          <h4>Bezahlmethoden</h4>
+          <h5>Barzahlung</h5>
+          Du kannst natürlich in Bar bezahlen. Nimm dir dazu einfach das Getränk und gib einem JEK Leiter das Geld.<br><br>
+          <h5>PayPal</h4>
+          Wir bieten dir PayPal als Zahlmethode. Bitte stelle sicher bei der Bezahlung "Freunde & Familie" auszuwählen!<br>
+          <p class="left-align light">
+            - Email Adresse: jugendtreffjek@gmail.com<br>
+            - <a href="https://www.paypal.me/reviewernetwork" target="_blank">PayPal Link</a><br>
+            - <a href="../pic/1euro.png" target="_blank">QR Code</a><br>
+            <br><br><br>
+        </div>
       </div>
+
     </div>
   </div>
 
@@ -133,7 +117,9 @@
       </div>
     </div>
   </footer>
+
   <!-- Scripts-->
+  
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="../js/materialize.js"></script>
   <script src="../js/init.js"></script>
