--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="row">
         <div class="col s12 m4">
           <div class="icon-block">
-            Im Jek wird dir folgendes geboten: <a class="white-text text-left" href="../impressum">Attraktionen</a>.
+            Im Jek wird dir folgendes geboten: <a href="../attractions.html">Attraktionen</a>.
         </div>
         </div>
         </div>
