--- a/attractions.html
+++ b/attractions.html
@@ -58,6 +58,7 @@
           <p class="left-align light">→ Airhockey<br>
           <p class="left-align light">→ Wii U Spiele mit Beamer<br>
           <p class="left-align light">→ Riesen Jenga<br>
+          <p class="left-align light">→ Brettspiele (u.a. Wizard, Activity, Halt mal kurz, ...)<br>
           <p class="left-align light">→ Musik und Getränke<br> <br><br>
         </div>
       </div>
