--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> <html lang="de"> <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="description" content="Das Jugendzentrum in Eglharting/Kirchseeon (JEK) - Nette Abende, Spiele, Getränke und mehr!">
-  <meta name="keywords" content="Jugendzentrum, JEK">
+  <meta name="keywords" content="Jugendzentrum, JEK, Jugendzentrum-Eglharting-Kirchseeon">
   <meta name="author" content="JEK">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
   <title>JEK Homepage Deutsch</title>
