--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <div class="col l3 s12">
           <h5 class="white-text">Ansprechpersonen aus Gemeinde</h5>
           <ul>
-            <li><a class="white-text" href="http://www.kirchseeon.de/index.php?id=440,50">Moritz Fässler</a></li>
+            <li><a class="white-text" href="http://www.kirchseeon.de/index.php?id=440,50">Marina Herceg</a></li>
           </ul>
         </div>
       </div>
